# structsptsim

./: CMakeLists.txt  LICENSE  Readme.md  generate_disp_cdf.m  generate_ivels_cdf.m
analysis/: Utils.m  compare_exp_simu.m  compare_mito_simu.m  compare_mito_simu_data.m  instantaneous_velocities.m  show_trajs.m
examples/: C2-210505_COS7_TOMM20-Halo-PAJF646_Mito-mNeonGreen_10.czi.tif_avg17.tif_musical_4_6_50frames_croped46pxs_avg_norm_gauss1.5px_Simple_Segmentation_binary_close1px_erode1px_erode1px.pgm  C2-210505_COS7_TOMM20-Halo-PAJF646_Mito-mNeonGreen_10.czi.tif_avg17.tif_musical_4_6_50frames_croped46pxs_avg_norm_gauss1.5px_Simple_Segmentation_binary_close1px_erode1px_erode1px_poly.poly  C2-210505_COS7_TOMM20-Halo-PAJF646_Mito-mNeonGreen_4.czi.tif_avg17.tif_musical_4_6_50frames_croped46pxs_avg_norm_gauss1.5px_Simple_Segmentation_binary_close1px_erode1px_erode1px.pgm  C2-210505_COS7_TOMM20-Halo-PAJF646_Mito-mNeonGreen_4.czi.tif_avg17.tif_musical_4_6_50frames_croped46pxs_avg_norm_gauss1.5px_Simple_Segmentation_binary_close1px_erode1px_erode1px_poly.poly  C2-210505_COS7_TOMM20-Halo-PAJF646_Mito-mNeonGreen_5.czi.tif_avg17.tif_musical_4_6_50frames_croped46pxs_avg_norm_gauss1.5px_Simple_Segmentation_binary_close1px_erode1px_erode1px.pgm  C2-210505_COS7_TOMM20-Halo-PAJF646_Mito-mNeonGreen_5.czi.tif_avg17.tif_musical_4_6_50frames_croped46pxs_avg_norm_gauss1.5px_Simple_Segmentation_binary_close1px_erode1px_erode1px_poly.poly  C2-210505_COS7_TOMM20-Halo-PAJF646_Mito-mNeonGreen_7.czi.tif_avg17.tif_musical_4_6_50frames_croped46pxs_avg_norm_gauss1.5px_Simple_Segmentation_binary_close1px_erode1px_erode1px.pgm  C2-210505_COS7_TOMM20-Halo-PAJF646_Mito-mNeonGreen_7.czi.tif_avg17.tif_musical_4_6_50frames_croped46pxs_avg_norm_gauss1.5px_Simple_Segmentation_binary_close1px_erode1px_erode1px_poly.poly  (+2 more)
resources/: C2-_2019_10_02__16_23_00_mask_5073.poly  ER9_VERYNICE_MMStack_Pos0.ome_Simple Segmentation_cleaned_binary_poly.poly  (+13 more)
src/: CMakeLists.txt  brownian_motion.cc  brownian_motion.hh  collider.cc  collider.hh  constant.hh  cum_distrib_function.cc  cum_distrib_function.hh  gensim_io.cc  gensim_io.hh  io.cc  io.hh  logger.cc  logger.hh  motion.cc  motion.hh  point.cc  point.hh  quadtree.cc  quadtree.hh  raw_image_simulator.cc  raw_image_simulator.hh  segment.cc  segment.hh  shape.cc  shape.hh  simulation.cc  simulation.hh  simulation_end_condition.cc  simulation_end_condition.hh  trajectory.cc  trajectory.hh  trajectory_end_condition.cc  trajectory_end_condition.hh  trajectory_generator.cc  trajectory_generator.hh  trajectory_recorder.cc  trajectory_recorder.hh  trajectory_start_generator.cc  trajectory_start_generator.hh  (+2 more)
(+28 files in other folders)
